--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -82,16 +82,22 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
 .dm {
   background: Linear-gradient(45deg, rgb(206, 219, 28), rgb(121, 216, 216));
   color: navy;
   display: inline-block;
-  font-size: 22px;
-  padding: 0 15px;
+  font-size: 24px;
+  padding: 0 120px;
   border-radius: 15px;
   margin-top: 30px;
-  margin-left: 50px;
+  margin-left: -50px;
   font-weight: 600;
+  width: 110%;
+}
+
+.dm span{
+  text-align: center;
 }
 
 /* ======================================================= */
