--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -50,6 +50,7 @@ img:hover { transform: scale(1.05); }
 }
 .health-heading span{
     background-color: darkgreen;
+    margin: 0 25px;
     color: white;
     display: inline-block;
     line-height: 3.6rem;
