--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -65,7 +65,8 @@ img:hover { transform: scale(1.05); }
   flex-wrap: wrap;
   gap: 20px;
   min-height: calc(100vh - 120px);
-  padding: 3rem -40px;
+
+  margin: 0px -30px;
 }
 
 
@@ -85,7 +86,7 @@ img:hover { transform: scale(1.05); }
 }
 
 .hero-content p {
-  font-size: 1.2em;
+  font-size: 20px;
   line-height:1.5;
   color:#030303
 }
