--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,7 +20,6 @@
   justify-content: space-between;
   height: 72px;
   padding: 0 -100px; /* increased gap inside navbar */
-  width: 110%;
   background-color: #fff; /* optional */
 }
 
@@ -31,7 +30,6 @@
 .logo img {
   height: 55px;
   display: block;
-  margin-left: 15px;
 }
 
 /* DESKTOP MENU */
@@ -136,6 +134,10 @@
 @media (max-width: 480px) {
   .contact-btn {
     display: none;
+  }
+  .logo img{
+    display: block;
+    margin-left: 80px;  
   }
 }
 
@@ -274,7 +276,10 @@
 
 .mobile-topbar .logo img {
   height: 50px;
+  display: block;
+  margin-left: 80px;
 }
+
 
 .mobile-actions {
   display: flex;
@@ -439,6 +444,17 @@
   .desktop-menu {
     display: none;
   }
+  .logo img{
+    display: block;
+    margin-left: 70px;
+   }
+}
+
+@media screen and (max-width: 720px){
+   .logo img{
+    display: block;
+    margin-left: 80px;
+   }
 }
 
 /* Remove hover/focus background for Menu (☰) and Cancel (✖) */
