--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -73,7 +73,7 @@ li, p { font-size: 17px; margin-bottom: 5px; }
 /* BLOG + FOOTER                                            */
 /* ======================================================= */
 /* Changed padding from 1.5rem 5% to 1.5rem 20px */
-.blog { padding: 1.5rem 20px; border-top: 1px solid #eee; margin-top: 5px; }
+.blog { padding: 1.5rem 20px; margin-top: 5px; }
 
 .blog a { color: #d40000; text-decoration: none; font-weight: bold; transition: color 0.3s ease; }
 
@@ -87,7 +87,6 @@ footer .btn { margin: 0.6rem 0; }
 .view-more-link{
   display: flex;
   justify-content: center;
-  padding: 60px 120px;
 }
 
 
