--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -37,7 +37,7 @@ body{
 
 .income-text {
   flex: 1;
-  font-size: 1.1rem;
+  font-size: 24px;
   text-align:start;
   padding:20px;
   border-radius:20px;
