--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -88,7 +88,7 @@ body {
   color: navy;
   display: inline-block;
   font-size: 19px;
-  padding: 0 120px;
+  padding: 10px 120px;
   border-radius: 15px;
   margin-top: 30px;
   margin-left: -50px;
