--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -40,10 +40,9 @@ img:hover { transform: scale(1.05); }
   /* bring page content up a bit */
   padding-top: 20px;
 }
-
 .health-heading {
-    text-align: center;
-    padding-left: 18px;
+    text-align: left;
+    margin: 0 20px;
 }
 .health-heading span{
     background-color: darkgreen;
