--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -271,10 +271,10 @@
   .women-image img,
   .women-image-row img {
     width: 275px;
-    height: 300px;
+    height: 250px;
   }
 
-  .women-program {
-    width: 95%;
+  .women-program img{
+    height: 270px;
   }
 }
