--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -41,8 +41,7 @@ img:hover { transform: scale(1.05); }
   display: flex;
   flex-direction: column;
   padding-top: 20px;
-  margin: 5px 30px;
-}
+  margin-left:-20px}
 
 .health-heading {
   text-align: left;
