--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -773,8 +773,9 @@ body {
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 20px;
-  border: 3px solid #f0f0f0;
+  border: 3px solid black;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  
 }
 
 /* This style applies to both founder and team member names */
